@@ -1395,11 +1395,10 @@ public abstract class Info extends CDialog
 	 *  @param AD_Window_ID window id
 	 *  @param zoomQuery zoom query
 	 */
-	@SuppressWarnings("deprecation")
 	protected void zoom (int AD_Window_ID, MQuery zoomQuery)
 	{
 		setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
-		final AWindow frame = new AWindow();
+		final AWindow frame = new AWindow(null);
 		if (!frame.initWindow(AD_Window_ID, zoomQuery))
 			return;
 		AEnv.addToWindowManager(frame);
@@ -1821,7 +1820,7 @@ public abstract class Info extends CDialog
 						else if (c == BigDecimal.class)
 							data = m_rs.getBigDecimal(colIndex);
 						else if (c == Double.class)
-							data = new Double(m_rs.getDouble(colIndex));
+							data = Double.valueOf(m_rs.getDouble(colIndex));
 						else if (c == Integer.class)
 							data = Integer.valueOf(m_rs.getInt(colIndex));
 						else if (c == KeyNamePair.class)
